different versions of java fix